// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaseBreadCrumb component renders as expected with data 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="container"
  />
  <div
    class="Toastify"
  />
  .c0 {
  grid-area: breadcrumb;
}

.c0 .breadcrumb-item:not(:first-child)::before {
  content: '>';
  width: 0px;
  margin-right: 1rem;
}

.c0 .breadcrumb li a {
  max-height: 24px;
}

.c0 ol {
  background-color: white;
}

<nav
    aria-label="breadcrumb"
    class="c0"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          href="#"
          role="button"
        >
          Management
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          href="/lease/list"
        >
          Lease & License Search
        </a>
      </li>
      <li
        aria-current="page"
        class="breadcrumb-item active"
      >
        Details
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`LeaseBreadCrumb component renders as expected with no data 1`] = `
<DocumentFragment>
  <div
    class="Toastify"
  />
  <div
    class="container"
  />
  <div
    class="Toastify"
  />
  .c0 {
  grid-area: breadcrumb;
}

.c0 .breadcrumb-item:not(:first-child)::before {
  content: '>';
  width: 0px;
  margin-right: 1rem;
}

.c0 .breadcrumb li a {
  max-height: 24px;
}

.c0 ol {
  background-color: white;
}

<nav
    aria-label="breadcrumb"
    class="c0"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          href="#"
          role="button"
        >
          Management
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          href="/lease/list"
        >
          Lease & License Search
        </a>
      </li>
      <li
        aria-current="page"
        class="breadcrumb-item active"
      />
    </ol>
  </nav>
</DocumentFragment>
`;
